フォルダ作り

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Naoya Nomura</title>
+    <title>野村直矢の開発室</title>
 </head>
 <body>
-    <h1>Hello, Render!</h1>
-    <p>Welcome to my simple webpage hosted on Render.</p>
+    <h1>作品</h1>
+    <h2><a href="https://todo-40i4.onrender.com/">TODO</a></h2>
+    <p>初めてReactを使って書いたシンプルなTODOアプリです。</p>
+    <p>タスクを入力すると未完了リストに追加されます。</p>
+    <p>完了を押すとタスクが完了リストに移動し，</p>
+    <p>削除ボタンを押すと消えます。</p>
+    <p>完了リストのタスクは戻すこともでき，</p>
+    <p>保存機能があるので，画面更新やブラウザの再起動が合ってもタスクが消えません。</p>
 </body>
 </html>
