フォルダ作り

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>野村直矢の開発室</title>
 </head>
 <body>
-    <h1>作品</h1>
-    <h2><a href="https://todo-40i4.onrender.com/">TODO</a></h2>
+    <h1>野村直矢の開発室</h1>
+    <h2>作品</h2>
+    <h3><a href="https://todo-40i4.onrender.com/">TODO</a></h3>
     <p>初めてReactを使って書いたシンプルなTODOアプリです。</p>
     <p>タスクを入力すると未完了リストに追加されます。</p>
     <p>完了を押すとタスクが完了リストに移動し，</p>
