--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>野村直矢の開発室</title>
+    <link rel="styleSheet" href="style.css">
 </head>
+
 <body>
-    <h1>野村直矢の開発室</h1>
-    <h2>作品</h2>
+    <h1>Naoya Nomura's laboratory</h1>
+    <div>
+        <h2>Works</h2>
+    </div>
     <h3><a href="https://todo-40i4.onrender.com/">TODO</a></h3>
     <p>初めてReactを使って書いたシンプルなTODOアプリです。</p>
     <p>タスクを入力すると未完了リストに追加されます。</p>
@@ -16,4 +21,5 @@
     <p>完了リストのタスクは戻すこともでき，</p>
     <p>保存機能があるので，画面更新やブラウザの再起動が合ってもタスクが消えません。</p>
 </body>
+
 </html>
