--- a/index.html
+++ b/index.html
@@ -1,131 +1,106 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ja">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Naoya Nomura's Laboratory</title>
-    <link rel="canonical" href="https://popo-design.net/template/">
-    <link rel="stylesheet" media="all" href="css/ress.min.css" />
-    <link rel="stylesheet" media="all" href="css/style.css" />
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/style.js"></script>
-
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="img/favicon.png">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header>
-        <div class="container">
-            <div class="row">
-                <div class="col span-12">
-                    <div class="head">
-                        <h1><a href="index.html">Naoya Nomura's Laboratory</a></h1>
-                        <div class="snsbox">
-                            <img src="img/in-icon.png" alt="Instagram">
-                            <img src="img/fb-icon.png" alt="Facebook">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col span-12">
-                    <nav>
-                        <div id="open"></div>
-                        <div id="close"></div>
-                    </nav>
-                </div>
-            </div>
-        </div>
+        <h1>Naoya Nomura's Laboratory</h1>
+        <nav>
+            <a href="#about">自己紹介</a>
+            <a href="#works">作品</a>
+            <a href="#hobbies">趣味</a>
+            <a href="#contact">連絡先</a>
+        </nav>
     </header>
-    <div class="mainimg">
-        <img src="img/intro.JPEG" alt="メイン画像">
-    </div>
+
     <main>
-        <section>
+        <section id="about">
+            <h2>自己紹介</h2>
             <div class="container">
-                <h2 class="catch">Works</h2>
-                <div class="row">
-                    <div class="col span-4">
-                        <figure>
-                            <a href="https://tabeletennisscounter.onrender.com">
-                                <img src="img/takkyuu.jpg" alt="卓球得点表アプリ画像">
-                                <figcaption>卓球の得点をカウントするアプリです。何点先取かも選べます。どちらかが勝つと得点ボタンは停止し、リセットのみが可能になります。</figcaption>
-                            </a>
-                        </figure>
-                    </div>
-                    <div class="col span-4">
-                        <figure>
-                            <a href="https://todo-40i4.onrender.com/">
-                                <img src="img/todo.jpg" alt="卓球得点表アプリ画像">
-                                <figcaption>Reactで作ったTODOアプリです。useStatesで内容を保存するため、ページが更新されたりブラウザが再起動してもTODOが消えません。
-                                </figcaption>
-                            </a>
-                        </figure>
-                    </div>
-                    <div class="col span-4">
-                        <figure>
-                            <img src="img/catch.jpg" alt="画像">
-                            <figcaption>キャプション</figcaption>
-                        </figure>
+                <img src="images/IMG_4210.JPG" alt="プロフィール写真">
+                <div class="item">
+                    <p>こんにちは！<br>
+                        東京大学3年、野村直矢と申します。インターンを機にプログラミングに興味を持ち、今はJavaScriptを勉強しながら色々開発しています。普段はITベンチャーでインターンをしており、業務効率化パッケージSalesforceの管理に携わっています。
+                        拙い作品ではありますが、よろしければご覧いただけると幸いです。
+                    </p>
+                </div>
+                <div class="item2">
+                    <div>
+                        <h3>
+                            大学: 東京大学<br>
+                            学部: 教育学部<br>
+                            学年: 3年生<br>
+                            専攻: 教育心理学<br>
+                            趣味： 美味しいもの巡り、プログラミング学習<br>
+                            好きな食べ物：からあげ<br>
+                            座右の銘: 率先垂範<br>
+                            志望業界: IT業界（特に自社開発ソフトウェアに関心）<br>
+                            志望職種: システムエンジニア<br>
+                        </h3>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col span-4">
-                        <figure>
-                            <img src="img/catch.jpg" alt="画像">
-                            <figcaption>キャプション</figcaption>
-                        </figure>
-                    </div>
-                    <div class="col span-4">
-                        <figure>
-                            <img src="img/catch.jpg" alt="画像">
-                            <figcaption>キャプション</figcaption>
-                        </figure>
-                    </div>
-                    <div class="col span-4">
-                        <figure>
-                            <img src="img/catch.jpg" alt="画像">
-                            <figcaption>キャプション</figcaption>
-                        </figure>
-                    </div>
-                </div>
-                <p class="center"><button>その他のギャラリー</button></p>
             </div>
         </section>
-    </main>
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col span-4">
-                    <h5>フッター１</h5>
-                    <p>ここにSNSやテキストなどが入ります。SNSやテキストなどが入ります。</p>
-                </div>
-                <div class="col span-4">
-                    <h5>フッター２</h5>
-                    <p>ここにSNSやテキストなどが入ります。SNSやテキストなどが入ります。</p>
-                </div>
-                <div class="col span-4">
-                    <h5>フッター３</h5>
-                    <p>ここにSNSやテキストなどが入ります。SNSやテキストなどが入ります。</p>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <div class="copyright">
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <hr>
-                    Copyright © Naoya Nomura
 
+        <section id="works">
+            <h2>作品</h2>
+            <div class="works">
+                <div class="work">
+                    <a href="https://todo-40i4.onrender.com/">
+                        <img src="images/todo.png" alt="TODO">
+                    </a>
+                    <h3>TODO</h3>
+                    <p>Reactで作ったTODOアプリです。useStatesで内容を保存するため、ページが更新されたりブラウザが再起動してもTODOが消えません。初めて作ったアプリで、Udemyの動画を見て、何度もエラーを出しながら作り上げた達成感は、今でもよく覚えています。父がスマホを持っていないため、大事な予定を忘れないようパソコンのブラウザ上で動くTODOアプリを作ってあげたいと思ったのが作成のきっかけです。もともと完了エリア側の削除ボタンはなかったのですが、父からの要望で新たに設置しました。とても喜んでもらい、プログラミングで作ったアプリが他の人の役に立つことの喜びを知りました。
+                    </p>
+                    <a href="https://todo-40i4.onrender.com/">詳しく見る</a>
+                </div>
+                <div class="work">
+                    <a href="https://tabeletennisscounter.onrender.com/">
+                        <img src="images/pinpon.png" alt="アプリ1">
+                    </a>
+                    <h3>卓球得点表</h3>
+                    <p>前回のTODOは少し背伸びしたなという印象でした。今度はもう少し等身大で、調べつつも自分で作ることができる得点表アプリを選びました。ボタンを押すとそれぞれのプレイヤーの得点が加算され、勝ち負けが決まると勝者の得点が緑色に、敗者の得点が赤色に変わり、リセットボタンのみが押せる状態になります。何点先取か選べるようにしたことが工夫点です。CSSフレームワーク"bulma"を使用し、すっきりとした見た目に整えました。CSSフレームワークに親しむことができたのも大きな収穫でした。
+                    </p>
+                    <a href="https://tabeletennisscounter.onrender.com/">詳しく見る</a>
+                </div>
+                <div class="work">
+                    <a href="https://textcounter.onrender.com">
+                        <img src="images/textcounter.jpeg" alt="アプリ3">
+                    </a>
+                    <h3>テキストカウンター</h3>
+                    <p>入力されたテキストの文字数を数え、リアルタイムで表示します。保存機能がついているので、画面の更新やブラウザの再起動があってもテキストが保存されます。就職活動中、友達が別の文字数カウンターを使って3時間かけて作ったエントリーシートが、指を滑らせた表紙に画面を更新してしまい消滅するという事件がありました。この悲劇を決して繰り返してはいけない。このカウンターならうっかり更新してもへっちゃらです。早口原稿にならないように、ゆっくり読んで何秒かかるか表示する機能もつけました。友達にも感謝され、嬉しい限りです。
+                    </p>
+                    <a href="https://textcounter.onrender.com">詳しく見る</a>
                 </div>
             </div>
-        </div>
-    </div>
-    <p id="pagetop"><a href="#">TOP</a></p>
+        </section>
+
+        <section id="hobbies">
+            <h2>趣味</h2>
+            <p>美味しいもの巡りが大好きです</p>
+            <div class="gallery">
+                <img src="images/IMG_4861.jpg" alt="料理1">
+                <img src="images/IMG_4700.jpg" alt="料理2">
+                <img src="images/IMG_4647.jpg" alt="料理3">
+                <img src="images/IMG_4548.jpg" alt="料理4">
+            </div>
+        </section>
+
+        <section id="contact">
+            <h2>連絡先</h2>
+            <p>メール: <a id="email" href="nomura.naoya.jobsearch@gmail.com">nomura.naoya.jobsearch@gmail.com</a></p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Naoya Nomura</p>
+    </footer>
 </body>
 
 </html>
