写真巨大化防止

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <img src="images/IMG_4210.JPG" alt="プロフィール写真">
                 <div class="item">
                     <p>こんにちは！<br>
-                        東京大学3年、野村直矢と申します。インターンを機にプログラミングに興味を持ち、今はJavaScriptを勉強しながら色々開発しています。普段はITベンチャーでインターンをしており、業務効率化パッケージSalesforceの管理に携わっています。
-                        拙い作品ではありますが、よろしければご覧いただけると幸いです。
+                        東京大学3年、野村直矢と申します。普段はITベンチャーでインターンをしており、業務効率化パッケージSalesforceの管理に携わっています。インターンを機にITやプログラミングに興味を持ち、今はJavaScriptを勉強しながら色々開発しています。
+                        開発は時にエラーに苦しみつつもとても楽しいです。周りの人が使って喜んでくれるのもモチベーションにつながっています。拙い作品ではありますが、よろしければご覧いただけると幸いです。
                     </p>
                 </div>
                 <div class="item2">
@@ -85,10 +85,18 @@
             <h2>趣味</h2>
             <p>美味しいもの巡りが大好きです</p>
             <div class="gallery">
-                <img src="images/IMG_4861.jpg" alt="料理1">
-                <img src="images/IMG_4700.jpg" alt="料理2">
-                <img src="images/IMG_4647.jpg" alt="料理3">
-                <img src="images/IMG_4548.jpg" alt="料理4">
+                <a href="https://tabelog.com/tokyo/A1303/A130301/13043926/">
+                    <img src="images/IMG_4861.jpg" alt="料理1">
+                </a>
+                <a href="https://www.negishi.co.jp/">
+                    <img src="images/IMG_4700.jpg" alt="料理2">
+                </a>
+                <a href="https://tabelog.com/tokyo/A1303/A130301/13242150/">
+                    <img src="images/IMG_4647.jpg" alt="料理3">
+                </a>
+                <a href="https://tabelog.com/tokyo/A1310/A131003/13085246/">
+                    <img src="images/IMG_4548.jpg" alt="料理4">
+                </a>
             </div>
         </section>
 
