--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="work">
                     <a href="https://tabeletennisscounter.onrender.com/">
-                        <img src="images/pinpon.png" alt="アプリ1">
+                        <img src="images/pinpon.png" alt="卓球得点表">
                     </a>
                     <h3>卓球得点表</h3>
                     <p>前回のTODOは少し背伸びしたなという印象でした。今度はもう少し等身大で、調べつつも自分で作ることができる得点表アプリを選びました。ボタンを押すとそれぞれのプレイヤーの得点が加算され、勝ち負けが決まると勝者の得点が緑色に、敗者の得点が赤色に変わり、リセットボタンのみが押せる状態になります。何点先取か選べるようにしたことが工夫点です。CSSフレームワーク"bulma"を使用し、すっきりとした見た目に整えました。CSSフレームワークに親しむことができたのも大きな収穫でした。
@@ -71,12 +71,21 @@
                 </div>
                 <div class="work">
                     <a href="https://textcounter.onrender.com">
-                        <img src="images/textcounter.jpeg" alt="アプリ3">
+                        <img src="images/textcounter.jpeg" alt="テキストカウンター">
                     </a>
                     <h3>テキストカウンター</h3>
                     <p>入力されたテキストの文字数を数え、リアルタイムで表示します。保存機能がついているので、画面の更新やブラウザの再起動があってもテキストが保存されます。就職活動中、友達が別の文字数カウンターを使って3時間かけて作ったエントリーシートが、指を滑らせた表紙に画面を更新してしまい消滅するという事件がありました。この悲劇を決して繰り返してはいけない。このカウンターならうっかり更新してもへっちゃらです。早口原稿にならないように、ゆっくり読んで何秒かかるか表示する機能もつけました。友達にも感謝され、嬉しい限りです。
                     </p>
                     <a href="https://textcounter.onrender.com">詳しく見る</a>
+                </div>
+                <div class="work">
+                    <a href="https://shiritori-41oy.onrender.com/">
+                        <img src="images/shiritori.png" alt="しりとり道場">
+                    </a>
+                    <h3>しりとり道場</h3>
+                    <p>しりとり師範としりとりで遊べます。師範は難しい言葉ばかり使ってきます。なんと500語収録。師範はずるいので「ん」で終わっても続けてきます。こっちが「ん」で終わったら注意してくるくせに。「ゃ」で終わったら「や」、「しょー」で終わったら「よ」で始まるなど、しりとりのルールを厳守しています。師範の単語の終わりの文字と違う文字で始まる単語を入力すると、「しりとり知ってる？」と煽ってきます。君は果たして師範を倒し、しりとりマスターになれるのだろうか！
+                    </p>
+                    <a href="https://shiritori-41oy.onrender.com/">詳しく見る</a>
                 </div>
             </div>
         </section>
