--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <img src="images/shiritori.png" alt="しりとり道場">
                     </a>
                     <h3>しりとり道場</h3>
-                    <p>しりとり師範としりとりで遊べます。師範は難しい言葉ばかり使ってきます。なんと500語収録。師範はずるいので「ん」で終わっても続けてきます。こっちが「ん」で終わったら注意してくるくせに。「ゃ」で終わったら「や」、「しょー」で終わったら「よ」で始まるなど、しりとりのルールを厳守しています。師範の単語の終わりの文字と違う文字で始まる単語を入力すると、「しりとり知ってる？」と煽ってきます。君は果たして師範を倒し、しりとりマスターになれるのだろうか！
+                    <p>しりとり師範としりとりで遊べます。師範は難しい言葉ばかり使ってきます。なんと500語収録、充実の解説付き。師範はずるいので「ん」で終わっても続けてきます。こっちが「ん」で終わったら注意してくるくせに。「ゃ」で終わったら「や」、「しょー」で終わったら「よ」で始まるなど、しりとりのルールを厳守しています。師範の単語の終わりの文字と違う文字で始まる単語を入力すると、「しりとり知ってる？」と煽ってきます。君は果たして師範を倒し、しりとりマスターになれるのだろうか！
                     </p>
                     <a href="https://shiritori-41oy.onrender.com/">詳しく見る</a>
                 </div>
