のむポストを追加

--- a/index.html
+++ b/index.html
@@ -52,6 +52,15 @@
             <h2>作品</h2>
             <div class="works">
                 <div class="work">
+                    <a href="https://karaagepost.onrender.com/">
+                        <img src="images/nomupost.png" alt="掲示板">
+                    </a>
+                    <h3>のむポスト（掲示板）</h3>
+                    <p>Javaのフレームワーク、Springを活用して作成した掲示板アプリです。投稿を作成し削除ができるほか、投稿ごとの詳細画面でコメントをつけることもできます。投稿やコメントはPostgreSQLのデータベースに保存されます。フレームワークは以前から習得しようとしていたのですが、いまいち仕組みがわからずその度に挫折してしまいました。そこで、まずはJavaを用いてサーブレットやJSPなどの低レベルな技術を学ぶことで、高レベルなSpringを理解できるようになりました。宙に浮いた理解ではなく、仕組みから理解することが応用においても重要であると学びました。
+                    </p>
+                    <a href="https://karaagepost.onrender.com/">詳しく見る</a>
+                </div>
+                <div class="work">
                     <a href="https://todo-40i4.onrender.com/">
                         <img src="images/todo.png" alt="TODO">
                     </a>
