--- a/index.html
+++ b/index.html
@@ -26,22 +26,18 @@
                 <img src="images/IMG_4210.JPG" alt="プロフィール写真">
                 <div class="item">
                     <p>こんにちは！<br>
-                        東京大学3年、野村直矢と申します。普段はITベンチャーでインターンをしており、業務効率化パッケージSalesforceの管理に携わっています。インターンを機にITやプログラミングに興味を持ち、今はJavaScriptを勉強しながら色々開発しています。
-                        開発は時にエラーに苦しみつつもとても楽しいです。周りの人が使って喜んでくれるのもモチベーションにつながっています。拙い作品ではありますが、よろしければご覧いただけると幸いです。
+                        東京大学教育学部4年、野村直矢と申します。人と違うことをやりたい、他の誰でもない自分でいたいという気持ちが強く、あまり学生がやっていなそうなAzureを現在勉強しています。このポートフォリオもAzure
+                        App
+                        Serviceで動いているはずです。コーディングに関しては、Javaはずいぶん前に勉強したので、だいぶ忘れているかも、、、最新技術をどんどん学んでいきたいと思っています。どうぞよろしくお願いいたします。
                     </p>
                 </div>
                 <div class="item2">
                     <div>
                         <h3>
-                            大学: 東京大学<br>
-                            学部: 教育学部<br>
-                            学年: 3年生<br>
-                            専攻: 教育心理学<br>
-                            趣味： 美味しいもの巡り、プログラミング学習<br>
+                            趣味：美味しいもの巡り、プログラミング学習、世界史の勉強（特にフランス革命。今のところ誰にも良さがわかってもらえてないけれど、どんなものでも「これだけは誰よりも知っている！」と思えるものがあると素敵だと思うんです。）<br>
                             好きな食べ物：からあげ<br>
-                            座右の銘: 率先垂範<br>
-                            志望業界: IT業界（特に自社開発ソフトウェアに関心）<br>
-                            志望職種: システムエンジニア<br>
+                            座右の銘: 確固たるアイデンティティ<br>
+                            興味のある分野： Azure、AWS、AI、Java
                         </h3>
                     </div>
                 </div>
@@ -55,8 +51,8 @@
                     <a href="https://karaagepost.onrender.com/">
                         <img src="images/nomupost.png" alt="掲示板">
                     </a>
-                    <h3>のむポスト（掲示板）</h3>
-                    <p>Javaのフレームワーク、Springを活用して作成した掲示板アプリです。投稿を作成し削除ができるほか、投稿ごとの詳細画面でコメントをつけることもできます。投稿やコメントはPostgreSQLのデータベースに保存されます。フレームワークは以前から習得しようとしていたのですが、いまいち仕組みがわからずその度に挫折してしまいました。そこで、まずはJavaを用いてサーブレットやJSPなどの低レベルな技術を学ぶことで、高レベルなSpringを理解できるようになりました。宙に浮いた理解ではなく、仕組みから理解することが応用においても重要であると学びました。
+                    <h3>のむポスト（現在休止中）</h3>
+                    <p>Javaのフレームワーク、Springを活用して作成した掲示板アプリです。投稿を作成し削除ができるほか、投稿ごとの詳細画面でコメントをつけることもできます。投稿やコメントはPostgreSQLのデータベースに保存されます。フレームワークは以前から習得しようとしていたのですが、いまいち仕組みがわからずその度に挫折してしまいました。そこで、まずはJavaを用いてサーブレットやJSPなどの低レベルな技術を学ぶことで、高レベルなSpringを理解できるようになりました。宙に浮いた理解ではなく、仕組みから理解することが応用においても重要であると学びました。(現状レスポンシブデザインに対応していないため、スマホで開くと表示が崩れる場合があります)
                     </p>
                     <a href="https://karaagepost.onrender.com/">詳しく見る</a>
                 </div>
