add Powerd by Azure and delete some images

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <header id="site-header">
         <div>
             <h1 class="site-title">Naoya Nomura's Laboratory</h1>
+            <h1>Powered by Azure</h1>
             <nav class="site-nav">
                 <a href="#site-header">HOME</a>
                 <a href="#about-me">ABOUT ME</a>
